enhancement: divided single HealthCheck endpoint into two; for API server and DB connection
